another contrast issue fix in code syntax highlighter

--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -35,7 +35,7 @@
   .kr    { font-weight: bold } // Keyword.Reserved
   .kt    { color: #458; font-weight: bold } // Keyword.Type
   .m     { color: #099 } // Literal.Number
-  .s     { color: #d14 } // Literal.String
+  .s     { color: #D51041 } // Literal.String
   .na    { color: #007A7A } // Name.Attribute
   .nb    { color: #0086B3 } // Name.Builtin
   .nc    { color: #458; font-weight: bold } // Name.Class
@@ -52,16 +52,16 @@
   .mh    { color: #099 } // Literal.Number.Hex
   .mi    { color: #099 } // Literal.Number.Integer
   .mo    { color: #099 } // Literal.Number.Oct
-  .sb    { color: #d14 } // Literal.String.Backtick
-  .sc    { color: #d14 } // Literal.String.Char
-  .sd    { color: #d14 } // Literal.String.Doc
-  .s2    { color: #d14 } // Literal.String.Double
-  .se    { color: #d14 } // Literal.String.Escape
-  .sh    { color: #d14 } // Literal.String.Heredoc
-  .si    { color: #d14 } // Literal.String.Interpol
-  .sx    { color: #d14 } // Literal.String.Other
+  .sb    { color: #D51041 } // Literal.String.Backtick
+  .sc    { color: #D51041 } // Literal.String.Char
+  .sd    { color: #D51041 } // Literal.String.Doc
+  .s2    { color: #D51041 } // Literal.String.Double
+  .se    { color: #D51041 } // Literal.String.Escape
+  .sh    { color: #D51041 } // Literal.String.Heredoc
+  .si    { color: #D51041 } // Literal.String.Interpol
+  .sx    { color: #D51041 } // Literal.String.Other
   .sr    { color: #009926 } // Literal.String.Regex
-  .s1    { color: #d14 } // Literal.String.Single
+  .s1    { color: #D51041 } // Literal.String.Single
   .ss    { color: #990073 } // Literal.String.Symbol
   .bp    { color: #999 } // Name.Builtin.Pseudo
   .vc    { color: #007A7A } // Name.Variable.Class
